# terraform-101

./: .gitignore  README.md  deploy.sh  slides.md  style.css  update_deployment.sh
crush_bot/: Cargo.toml
crush_bot/src/: main.rs
infrastructure/: api_gateway.tf  lambda.tf  variables.tf
src/: main.js
