[package]
name = "crush_bot"
version = "0.1.0"
authors = ["Supanat Pothivarakorn <supanat.ptk@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0"
lambda_runtime = "0.1.0"
log = "^0.4"
simple_logger = "1.0.1"
rand = "0.6.4"
rust_line_bot_sdk = { git = "https://github.com/iboss-ptk/rust-line-bot-sdk" }
